--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -1,11 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<io.supercharge.shimmerlayout.ShimmerLayout android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:id="@+id/layout_loading"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <io.supercharge.shimmerlayout.ShimmerLayout
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            app:cardCornerRadius="12dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
+            app:cardBackgroundColor="@color/grey_d3d3d3"
+            android:layout_height="180dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:paddingVertical="12dp"
+                android:paddingHorizontal="8dp"
+                android:layout_height="match_parent">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="160dp"
+                    app:cardCornerRadius="12dp"
+                    android:layout_marginHorizontal="6dp"
+                    android:layout_height="160dp">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:scaleType="centerCrop"
+                        android:alpha="0.4"
+                        android:src="@drawable/grey_thumb"
+                        android:layout_height="match_parent"
+                        android:contentDescription="MyImage" />
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginEnd="20dp"
+                        android:background="@color/grey_ced4da"
+                        android:layout_height="18dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/grey_ced4da"
+                        android:layout_height="18dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="60dp"
+                        android:background="@color/grey_ced4da"
+                        android:layout_height="18dp"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -23,20 +84,108 @@
                 android:layout_height="match_parent">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="120dp"
+                    android:layout_width="160dp"
                     app:cardCornerRadius="12dp"
-                    android:layout_height="120dp">
+                    android:layout_marginHorizontal="6dp"
+                    android:layout_height="160dp">
                     <ImageView
-                        android:layout_width="120dp"
-
-                        android:layout_height="120dp"/>
+                        android:layout_width="match_parent"
+                        android:scaleType="centerCrop"
+                        android:alpha="0.4"
+                        android:src="@drawable/grey_thumb"
+                        android:layout_height="match_parent"
+                        android:contentDescription="MyImage" />
                 </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginEnd="20dp"
+                        android:background="@color/grey_ced4da"
+                        android:layout_height="18dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/grey_ced4da"
+                        android:layout_height="18dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="60dp"
+                        android:background="@color/grey_ced4da"
+                        android:layout_height="18dp"/>
+                </LinearLayout>
 
 
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
-    </io.supercharge.shimmerlayout.ShimmerLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            app:cardCornerRadius="12dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
+            app:cardBackgroundColor="@color/grey_d3d3d3"
+            android:layout_height="180dp">
 
-</RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:paddingVertical="12dp"
+                android:paddingHorizontal="8dp"
+                android:layout_height="match_parent">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="160dp"
+                    app:cardCornerRadius="12dp"
+                    android:layout_marginHorizontal="6dp"
+                    android:layout_height="160dp">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:scaleType="centerCrop"
+                        android:alpha="0.4"
+                        android:src="@drawable/grey_thumb"
+                        android:layout_height="match_parent"
+                        android:contentDescription="MyImage" />
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginEnd="20dp"
+                        android:background="@color/grey_ced4da"
+                        android:layout_height="18dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/grey_ced4da"
+                        android:layout_height="18dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="60dp"
+                        android:background="@color/grey_ced4da"
+                        android:layout_height="18dp"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+
+</io.supercharge.shimmerlayout.ShimmerLayout>
