--- a/app/src/main/res/layout/item_products.xml
+++ b/app/src/main/res/layout/item_products.xml
@@ -86,9 +86,9 @@
     <ProgressBar
         android:layout_width="48dp"
         android:layout_gravity="center"
-        android:layout_below="@id/rv_product"
         android:id="@+id/progress_more"
         android:visibility="gone"
+        android:layout_marginVertical="10dp"
         android:indeterminateTint="@color/primary"
         android:layout_height="48dp"/>
 </LinearLayout>
